--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -12,7 +12,7 @@
 <br>
 <div class="row">
   <div class="small-12 columns text-center">        
-    <a href="/search"><img src="static/img/logo_simple.png"></a>            
+    <a href="/search"><img src="/static/img/logo_simple.png"></a>            
   </div>       
 </div>
 <div class="row">
