--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -18,7 +18,7 @@
 <div class="row">
   <div class="medium-6 small-centered columns">        
     <form action="/search" method="POST">            
-          <input class="search round" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Search for your favorites clothes, brands or bloggers...">                    
+          <input class="search round" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Search for your favorite clothes, brands or bloggers...">                    
     </form>           
   </div>       
 </div>
