--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -129,7 +129,7 @@
         <div class="row text-center">          
           <br> 
           <div class="medium-4 large-4 small-12 columns">
-            <a href="#">
+            <a href="http://www.facebook.com/itoutfits">
              <img src="static/img/facebook.png"></a>
              <p><br></p>            
           </div>          
