--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="it outfits, itoutfits, fashion bloggers, fashion trends, fashionista, latest fashion trends, fashion, models, clothes, outfits, shoes, trousers, jackets, street sytle, jeans">
     <meta name="twitter:site" content="@itoutfits">
     <meta name="twitter:domain" content="itoutfits.com">
-    <title>itOutfits | {{post}} {{title}} </title>
+    <title>itOutfits | {{post}} {{title}} #fashion </title>
     <link rel="stylesheet" href="/static/css/foundation.css" />
     <link href='http://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet' type='text/css'>
     <script src="/static/js/vendor/modernizr.js"></script>
@@ -20,9 +20,13 @@
       background-size: cover;
       }
       body {
+      font-family: "Fira Sans","Helvetica Neue",Helvetica,sans-serif;
+      -webkit-font-smoothing: antialiased;
+      -webkit-text-size-adjust: none;
       background: transparent;
       }
-      h4, h2, h3, footer {
+      
+      h5, h4, h2, h3, footer {
       color: white;
       font-family: "Proxima", "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-weight: 100;
@@ -46,31 +50,24 @@
     }
 
     .image {
-     height: 100%;     
+     width: 100%;     
     }
 
     .search {
      color: black;
      
      opacity:0.8;    
-    }
-      
+    }      
     .top-bar {height: 50px;
               opacity:0.8; }
-
     .main-content{
       background-color: #F0F0F0 !important;
     }
     .extra-content{
       background-color: white !important;
     }
-
     .black{color:grey;}
-
-    .title{color:grey;}
-
-
-    
+    .title{color:grey;}   
      
     </style>
     <script>
