--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -11,28 +11,67 @@
 <br>
 <br>
 <div class="row">
-  <div class="small-12 columns text-center">        
-    <a href="/search"><img src="/static/img/logo_simple.png"></a>            
-  </div>       
+  <div class="small-12 columns text-center">
+    <a data-reveal-id="myModal"><img  src="/static/img/logo_simple.png"></a>
+    <div id="myModal" class="reveal-modal small" data-reveal>  
+             <div class="row text-center"> 
+    <div class="medium-12 large-12 small-12 columns supporticons">            
+               <h3 class="title">Don´t forget to follow us and spread the word!</h3>             
+    </div>
+  </div>
+    <div class="row text-center">          
+      <br> 
+      <div class="medium-4 large-4 small-12 columns">
+        <a href="http://www.facebook.com/itoutfits">
+        <img src="static/img/facebook.png"></a>
+        <p><br></p>            
+      </div>          
+      <div class="medium-4 large-4 small-12 columns">
+        <a href="#">
+        <img src="static/img/googleplus.png"> </a> 
+        <p><br></p>                         
+      </div>          
+      <div class="medium-4 large-4 small-12 columns">
+        <a href="http://twitter.com/itOutfits">
+        <img src="static/img/twitter.png"></a>
+        <p><br></p>             
+      </div>          
+      </div>    
+    <div class="row text-center">
+        <div class="medium-12 large-12 small-12 columns supporticons">            
+               <h4 class="title">Subcribe to our newsletter and you will get the latest trends</h4>             
+        </div>                
+    </div>
+    <br>      
+    <div class="row text-center">
+        <div class="large-4 small-6 small-centered columns">      
+              <a href="http://eepurl.com/RDhiz" type="submit" name="submit" value="True" class="button postfix" ><h4>Subcribe</h4></a> 
+         </div>        
+      </div>  
+      <a class="close-reveal-modal">×</a>        
+  </div>
+</div>       
 </div>
 <div class="row">
   <div class="medium-6 small-centered columns">        
     <form action="/search" method="POST">            
-          <input class="search round" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Search for your favorite clothes, brands or bloggers...">                    
+          <input class="search radius" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Search for your favorites clothes, brands or bloggers...">                    
     </form>           
   </div>       
+</div>
+<div class="row">
+  <div class="small-12 columns text-center">        
+    <h5><a href="/latestoutfits" style="color: white">Latest Outfits</a> </h5>
+  </div>      
 </div>
 <br>
 <br>
 <br>
 <br>
-<div class="row">
-  <div class="small-12 columns text-center">
-    <a href="http://twitter.com/itOutfits"><img src="/static/img/Twitter_logo_white_small.png"></a>
-  </div>       
-</div> 
 <br>
- 
+<br>
+
+<br> 
 <br>
 <br>
 <br>
