--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -21,10 +21,21 @@
           <form action="/search" method="POST">            
               <input class="search" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Clothes, brands or bloggers...">   
         </form>
-       
+        <br>
+        <!-- AddThis Button BEGIN -->     
+        <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+        <a class="addthis_button_facebook"></a>
+        <a class="addthis_button_twitter"></a>
+        <a class="addthis_button_pinterest_share"></a>
+        <a class="addthis_button_google_plusone_share"></a>
+        </div>
+        <br>
+        <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5268d2a97e02b5bb"></script>
+        <!-- AddThis Button END --> 
         </div>
         <div class="row">
-          <div class="large-12 columns">
+          <div class="large-12 columns">             
             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-2 center">
             {% for item in data.tags %}                       
                 <a href="/search/{{item}}" class="button small radius">{{item}}</a>              
@@ -35,7 +46,7 @@
         </div>
       </div>
     </div>
-      <div class="large-10 columns"> 
+      <div class="large-10 columns">    
       	<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-2 center">
         <br>
       	{% for images in dataImages %}                  
