twitter card II

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,8 @@
     <meta name="twitter:card" content="photo">
     <meta name="twitter:creator" content={{title}}>
     <meta name="twitter:title" content="lastest outfit">
-    {% if data[0].images[0] %}
-    <meta name="twitter:image:src" content={{data[0].images[0]}}>
+    {% if card %}
+    <meta name="twitter:image:src" content={{card.images[0]}}>
     {% endif %} 
     <meta name="twitter:domain" content="itoutfits.com">
     <title>itOutfits | {{post}} {{title}} #fashion </title>
