--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -12,7 +12,7 @@
 <br>
 <div class="row">
   <div class="small-12 columns text-center">
-    <a data-reveal-id="myModal"><img  src="/static/img/logo_simple.png"></a>
+    <a data-reveal-id="myModal" title="itOutfits - Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits."><img src="/static/img/logo_simple.png" alt="itOutfits - Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits."></a>
     <div id="myModal" class="reveal-modal small" data-reveal>  
              <div class="row text-center"> 
     <div class="medium-12 large-12 small-12 columns supporticons">            
@@ -61,16 +61,14 @@
 </div>
 <div class="row">
   <div class="small-12 columns text-center">        
-    <h5><a href="/latestoutfits" style="color: white">Latest Outfits</a> </h5>
+    <h5><a href="/latestoutfits" style="color: white"><strong>Latest Outfits</strong></a> </h5>
   </div>      
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
+<div class="row">
+  <div class="small-12 columns text-center">        
+    <h5 style="color: transparent">Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits. it outfits, itoutfits, fashion bloggers, fashion trends, fashionista, latest fashion trends, fashion, models, clothes, outfits, shoes, trousers, jackets, street sytle, jeans </h5>
+  </div>      
+</div>
 <br> 
 <br>
 <br>
