--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,7 +5,7 @@
       <div class="inner-wrap">
         <nav class="tab-bar">
           <section class="middle tab-bar-section">
-            <a href="/"><img class="logo "src="static/img/logo_simple_small.png"></a> 
+            <a href="/" title="itOutfits - Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits."><img class="logo "src="static/img/logo_simple_small.png"  alt="itOutfits - Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits."></a> 
           </section>                          
         </nav>    
       </div>
@@ -89,21 +89,21 @@
 
             <a href="learn/features.html#faster-for-users">
 
-             <img src="static/img/hunger.png">
+             <img alt="itoutfits" src="static/img/hunger.png">
              <h3 class="title">Clothes</h3></a>
              <p>Search for your favorite clothes. <br> Imagine your are so freak out that you don´t know how to match your favorite shirt. Check for latest trends and put on your best outfit.</p>
           </div>
           <div class="medium-4 large-4 columns supporticons">
              <a href="learn/features.html#faster-to-code">
 
-             <img src="static/img/label.png">
+             <img alt="itoutfits" src="static/img/label.png">
              <h3 class="title">Brands</h3></a>
              <p>Search for your favorite brands.<br> Do you want to know what is being trendy about any fashion brand? Check what is being wore how are combined with other brands and garmets.</p>
           </div>
           <div class="medium-4 large-4 columns supporticons">
              <a href="learn/features.html#faster-to-learn">
 
-             <img src="static/img/blogs.png">
+             <img alt="itoutfits" src="static/img/blogs.png">
              <h3 class="title">Bloggers</h3></a>
              <p>Search for your favorite fashion bloggers.<br> Do you want to wear what the it girls are wearing? itOutfits keeps tracks of all of them. If not let us know and we will keep track of them.</p>
           </div>
