--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -5,7 +5,7 @@
       <div class="inner-wrap">
         <nav class="tab-bar">
           <section class="middle tab-bar-section">
-            <a href="/"><img class="logo "src="/static/img/logo_simple_small.png"></a> 
+            <a href="/" title="itOutfits - Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits."><img class="logo "src="/static/img/logo_simple_small.png"></a> 
           </section>               
         </nav>    
       </div>
