--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits.">
     <meta name="keywords" content="it outfits, itoutfits, fashion bloggers, fashion trends, fashionista, latest fashion trends, fashion, models, clothes, outfits, shoes, trousers, jackets, street sytle, jeans">
     <link rel="canonical" href="http://www.itoutfits.com/">
-    <meta name="twitter:site" content="itoutfits">
+    <meta name="twitter:site" content="@itOutfits">
     <meta name="twitter:domain" content="itoutfits.com">
     <meta name="twitter:card" content="photo">
-    <meta name="twitter:creator" content={{title}}>
-    <meta name="twitter:title" content="Latest outfit">
+    <meta name="twitter:creator" content="@itOutfits">
+    <meta name="twitter:title" content="Latest outfits">
     {% if card %}
     <meta name="twitter:image:src" content={{card.images[0]}}>
     {% endif %}    
