--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -54,8 +54,8 @@
 </div>
 <div class="row">
   <div class="medium-6 small-centered columns">        
-    <form action="/search" method="POST">            
-          <input class="search radius" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Search for your favorites clothes, brands or bloggers...">                    
+    <form action="/search" method="GET">            
+          <input class="search radius" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Search for your favorite clothes, brands or fashion bloggers...">                    
     </form>           
   </div>       
 </div>
@@ -66,7 +66,7 @@
 </div>
 <div class="row">
   <div class="small-12 columns text-center">        
-    <h5 style="color: transparent">Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits. it outfits, itoutfits, fashion bloggers, fashion trends, fashionista, latest fashion trends, fashion, models, clothes, outfits, shoes, trousers, jackets, street sytle, jeans </h5>
+    <h5 style="color: transparent">Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits.  </h5>
   </div>      
 </div>
 <br> 
