--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -66,19 +66,12 @@
 </div>
 <div class="row">
   <div class="small-12 columns text-center">        
-    <h5 style="color: transparent">Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits.  </h5>
+    <h1 style="color: transparent">Be fashionable, discover the latest fashion trends on outfits, clothes, brands and fashion bloggers with itOutfits.  </h1>
+    <h2 style="color: transparent">FASHION TRENDS, FASHION BLOGGERS, LATEST FASHION, LASTEST OUTFITS, LATEST FASHION TRENDS, ITOUTFITS, brands, clothes </h2>
   </div>      
 </div>
-<br> 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+
 <br>
 <br>
 <br>
