--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -18,7 +18,7 @@
       <div class="large-2 columns">
         <br>
         <div class="row">
-          <form action="/search" method="POST">            
+          <form action="/search" method="GET">            
               <input class="search" style="color: #FFFFFF; background-color: black;" type="text" name="text" placeholder="Clothes, brands or bloggers...">   
         </form>
         <!-- AddThis Button BEGIN -->     
