--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,10 +7,8 @@
     <meta name="keywords" content="it outfits, itoutfits, fashion bloggers, fashion trends, fashionista, latest fashion trends, fashion, models, clothes, outfits, shoes, trousers, jackets, street sytle, jeans">
     <link rel="canonical" href="http://www.itoutfits.com/">
     <meta name="twitter:site" content="@itOutfits">
-    <meta name="twitter:domain" content="itoutfits.com">
     <meta name="twitter:card" content="photo">
-    <meta name="twitter:creator" content="@itOutfits">
-    <meta name="twitter:title" content="Latest outfits">
+    <meta name="twitter:title" content="{{title}}" >
     {% if card %}
     <meta name="twitter:image:src" content={{card.images[0]}}>
     {% endif %}    
