--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Be fashionable, discover the latest fashion trends on clothes, brands and fashion bloggers with itOutfits.">
     <meta name="keywords" content="it outfits, itoutfits, fashion bloggers, fashion trends, fashionista, latest fashion trends, fashion, models, clothes, outfits, shoes, trousers, jackets, street sytle, jeans">
-    <link rel="canonical" href="http://www.itoutfits.com/">
+    <!--link rel="canonical" href="http://www.itoutfits.com/"-->
     <meta name="twitter:site" content="@itOutfits">
     <meta name="twitter:card" content="photo">
     <meta name="twitter:title" content="{{title}}" >
